--- a/packet_parser/CMakeLists.txt
+++ b/packet_parser/CMakeLists.txt
@@ -1,14 +1,13 @@
 cmake_policy(SET CMP0076 NEW)
 target_sources(rtp_decoder
         PRIVATE
-        j2k_header.c
-        j2k_header.h
-        j2k_packet.c
-        j2k_packet.h
-        j2k_tile.c
-        j2k_tile.h
-        read_packet.h
-        type.h
-        utils.c
-        utils.h
+    j2k_header.cpp
+    j2k_header.hpp
+    j2k_packet.cpp
+    j2k_packet.hpp
+    j2k_tile.cpp
+    j2k_tile.hpp
+    type.hpp
+    utils.cpp
+    utils.hpp
 )
