--- a/packet_parser/CMakeLists.txt
+++ b/packet_parser/CMakeLists.txt
@@ -5,8 +5,8 @@ target_sources(rtp_decoder
     j2k_header.hpp
     j2k_packet.cpp
     j2k_packet.hpp
-    j2k_tile.cpp
-    j2k_tile.hpp
+#    j2k_tile.cpp
+#    j2k_tile.hpp
     type.hpp
     utils.cpp
     utils.hpp
